--- a/Script/02_merge_effort_spatial_data.Rmd
+++ b/Script/02_merge_effort_spatial_data.Rmd
@@ -165,227 +165,232 @@ missing_eez3<-missing_eez2 %>%
 trial<-as.data.table(select(missing_eez3, "Lon", "Lat", "LME"))
 trial_raster<-rasterFromXYZ(trial)
 plot(trial_raster)
+dev.off()
 # could be land discrepancy: 
 # 1 yes
 # 56 could be? 
 # 18 yes ... 
 
-## Could this be problematic - e.g. coastal effort considered for LMEs and not EEZs? Asked Julia - do trials below and plot outputs 
-# should we use the FAO_LME and FAO_EEZ interaction masks provided by Denisse (+FAO regions column) instead of LME and EEZ columns? Use them both and check outputs. 
+## Could this be problematic - e.g. coastal effort considered for LMEs and not EEZs? Asked Julia - only a few LME/EEZ at high lat affected. also these are the files used to work with catch and effort by Reg and Yannick and here we are using these files for consistency. 
+# should we use the FAO_LME and FAO_EEZ interaction masks provided by Denisse (+FAO regions column) instead of LME and EEZ columns? No, these were created for inputs only + see reason above. 
 
 ```
 
 # Add interection between LME and FAO 
 
+Mask created by Denisse but here not needed as FAO + LME column already consider this interaction  
+
 ```{r}
 
-# CN add LME_FAO intersections using mask provided by Denisse 
-# /rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/
-FAO_LME <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/FAO-LME-corrected_05degmask_DBEM.csv")
-
-# # CHECKS 
-# head(all_spatial_layers)
-# sort(unique(all_spatial_layers$Lon)) # from -179.75 to 179.75
-# length(unique(all_spatial_layers$Lon)) # 720
-# sort(unique(all_spatial_layers$Lat)) # from -89.75 to 89.75
-# length(unique(all_spatial_layers$Lat)) # 360
+# # CN add LME_FAO intersections using mask provided by Denisse 
+# # /rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/
+# FAO_LME <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/FAO-LME-corrected_05degmask_DBEM.csv")
 # 
-# head(FAO_LME)
-# sort(unique(FAO_LME$Lon)) # -179.75 to 179.75
-# length(unique(FAO_LME$Lon)) # 720
-# sort(unique(FAO_LME$Lat)) # from -85.25 - because Antarctica.  
-# length(unique(FAO_LME$Lat)) # 351
-# unique()
+# # # CHECKS 
+# # head(all_spatial_layers)
+# # sort(unique(all_spatial_layers$Lon)) # from -179.75 to 179.75
+# # length(unique(all_spatial_layers$Lon)) # 720
+# # sort(unique(all_spatial_layers$Lat)) # from -89.75 to 89.75
+# # length(unique(all_spatial_layers$Lat)) # 360
+# # 
+# # head(FAO_LME)
+# # sort(unique(FAO_LME$Lon)) # -179.75 to 179.75
+# # length(unique(FAO_LME$Lon)) # 720
+# # sort(unique(FAO_LME$Lat)) # from -85.25 - because Antarctica.  
+# # length(unique(FAO_LME$Lat)) # 351
+# # unique()
+# # 
+# # sort(unique(FAO_LME$ID_merged)) # See keys below 
+# # 
+# # #CHECK plot mask 
+# # library(raster)
+# # trial<-rasterFromXYZ(FAO_LME) 
+# # plot(trial)
+# # 
+# # # check LME and FAO regions
+# # sort(unique(as.data.table(LMEs)$LME)) # LME should be from 1 to 66 
+# # sort(unique(as.data.table(FAO_regions)$fao_area)) # FAO area should be: 18 21 27 31 34 37 41 47 48 51 57 58 61 67 71 77 81 87 88
+# # # Instead I have 83 ID because 3 FAO area overlap with LMEs (e.g. mediterranean sea - see Denisse's email on 9/05/23 RE: Catch and effort forcing for 3a)
+# # length(unique(FAO_LME$ID_merged))
 # 
-# sort(unique(FAO_LME$ID_merged)) # See keys below 
+# # codes 
+# FAO_LME_keys <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/FAO_LME_keys.csv")
 # 
-# #CHECK plot mask 
-# library(raster)
-# trial<-rasterFromXYZ(FAO_LME) 
-# plot(trial)
+# # nrow(FAO_LME_keys)
+# # View(FAO_LME_keys)
+# # # WARNING - repetitions: 61,71,81,88
+# FAO_LME_keys<-unique(FAO_LME_keys)
+# # nrow(FAO_LME_keys)
 # 
-# # check LME and FAO regions
-# sort(unique(as.data.table(LMEs)$LME)) # LME should be from 1 to 66 
-# sort(unique(as.data.table(FAO_regions)$fao_area)) # FAO area should be: 18 21 27 31 34 37 41 47 48 51 57 58 61 67 71 77 81 87 88
-# # Instead I have 83 ID because 3 FAO area overlap with LMEs (e.g. mediterranean sea - see Denisse's email on 9/05/23 RE: Catch and effort forcing for 3a)
-# length(unique(FAO_LME$ID_merged))
-
-# codes 
-FAO_LME_keys <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/FAO_LME_keys.csv")
-
-# nrow(FAO_LME_keys)
-# View(FAO_LME_keys)
-# # WARNING - repetitions: 61,71,81,88
-FAO_LME_keys<-unique(FAO_LME_keys)
-# nrow(FAO_LME_keys)
-
-# integrate info that Denisse provided on LME names 
-LME_names <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/LME_names.csv")
-
-# nrow(LME_names) # 66
-
-FAO_LME_keys<-FAO_LME_keys %>% 
-  full_join(LME_names)
-
-# combine with FAO_LME
-FAO_LME_keys_new<-FAO_LME_keys %>% 
-  mutate(Sector = ifelse(is.na(original_lme_id), "FAO", "LME"),
-         ID_original = ifelse(is.na(original_lme_id), ID_merged, original_lme_id),
-         LME_FAO = paste(Sector, ID_original, sep = "_")) %>% 
-  select(ID_merged, LME_FAO)
-
-# nrow(FAO_LME_keys_new) # 83
-
-FAO_LME_new<-FAO_LME %>% 
-  full_join(FAO_LME_keys_new) %>% 
-  select(-ID_merged)
-
-# nrow(FAO_LME) # 173371
-# nrow(FAO_LME_new) # 173371
-
-# use this file for the aggregation and check outputs
-
-# further checks 
-# # from https://iwlearn.net/marine/lmes/list
-# 1: East Bering Sea	
-# 18: West Greenland Shelf	
-# 35: Gulf of Thailand	
-# 52: Sea of Okhotsk
-# 2: Gulf of Alaska	
-# 19: East Greenland Shelf	
-# 36: South China Sea	
-# 53: West Bering Sea
-# 3: California Current	
-# 20: Barents Sea	
-# 37: Sulu-Celebes Sea	
-# 54: Northern Bering - Chukchi Seas
-# 4: Gulf of California	
-# 21: Norwegian Sea	
-# 38: Indonesian Sea	
-# 55: Beaufort Sea
-# 5: Gulf of Mexico	
-# 22: North Sea	
-# 39: North Australian Shelf	
-# 56: East Siberian Sea
-# 6: Southeast U.S. Continental Shelf	
-# 23: Baltic Sea 	
-# 40: Northeast Australian Shelf	
-# 57: Laptev Sea
-# 7: Northeast U.S. Continental Shelf	
-# 24: Celtic-Biscay Shelf	
-# 41: East Central Australian Shelf	
-# 58: Kara Sea
-# 8: Scotian Shelf	
-# 25: Iberian Coastal	
-# 42: Southeast Australian Shelf	
-# 59: Iceland Shelf and Sea
-# 9: Newfoundland-Labrador Shelf	
-# 26: Mediterranean Sea	
-# 43: South West Australian Shelf	
-# 60: Faroe Plateau
-# 10: Insular Pacific-Hawaiian	
-# 27: Canary Current	
-# 44: West Central Austalian Shelf	
-# 61: Antarctica
-# 11: Pacific Central-American Coastal	
-# 28: Guinea Current	
-# 45: Northwest Australian Shelf	
-# 62: Black Sea
-# 12: Caribbean Sea	
-# 29: Benguela Current	
-# 46: New Zealand Shelf	
-# 63: Hudson Bay Complex
-# 13: Humboldt Current	
-# 30: Agulhas Current	
-# 47: East China Sea	
-# 64: Central Arctic
-# 14: Patagonian Shelf	
-# 31: Somali Coastal Current	
-# 48: Yellow Sea	
-# 65: Aleutian Islands
-# 15: South Brazil Shelf	
-# 32: Arabian Sea	
-# 49: Kuroshio Current	
-# 66: Canadian High Arctic - North Greenland
-# 16: East Brazil Shelf	
-# 33: Red Sea	
-# 50: Sea of Japan	
-# 17: North Brazil Shelf	
-# 34: Bay of Bengal	
-# 51: Oyashio Current	
+# # integrate info that Denisse provided on LME names 
+# LME_names <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO-LME_masks/LME_names.csv")
 # 
-# LME_key_check<- data.frame(LME_number = c(1,18,35,52,2,19,36,53,3,20,37,54,4,21,38,55,5,22,39,56,6,23,40,57,7,24,41,58,8,25,42,59,9,26,43,60,10,27,44,61,11,28,45,62,12,29,46,63,13,30,47,64,14,31,48,65,15,32,49,66,16,33,50,17,34,51), name_merge = c("East Bering Sea","West Greenland Shelf","Gulf of Thailand","Sea of Okhotsk","Gulf of Alaska","East Greenland Shelf","South China Sea","West Bering Sea","California Current","Barents Sea","Sulu-Celebes Sea","Northern Bering - Chukchi Seas","Gulf of California","Norwegian Sea","Indonesian Sea","Beaufort Sea","Gulf of Mexico","North Sea","North Australian Shelf","East Siberian Sea","Southeast U.S. Continental Shelf","Baltic Sea","Northeast Australian Shelf","Laptev Sea","Northeast U.S. Continental Shelf","Celtic-Biscay Shelf","East Central Australian Shelf","Kara Sea","Scotian Shelf","Iberian Coastal","Southeast Australian Shelf","Iceland Shelf and Sea","Newfoundland-Labrador Shelf","Mediterranean Sea","South West Australian Shelf","Faroe Plateau","Insular Pacific-Hawaiian","Canary Current","West Central Austalian Shelf","Antarctica","Pacific Central-American Coastal","Guinea Current","Northwest Australian Shelf","Black Sea","Caribbean Sea","Benguela Current","New Zealand Shelf","Hudson Bay Complex","Humboldt Current","Agulhas Current","East China Sea","Central Arctic","Patagonian Shelf","Somali Coastal Current","Yellow Sea","Aleutian Islands","South Brazil Shelf", "Arabian Sea","Kuroshio Current","Canadian High Arctic - North Greenland","East Brazil Shelf", "Red Sea", "Sea of Japan","North Brazil Shelf","Bay of Bengal", "Oyashio Current"))
+# # nrow(LME_names) # 66
 # 
-# View(LME_key_check)
-# View(LME_names) # LME 18 and 19 have different names but OK 
+# FAO_LME_keys<-FAO_LME_keys %>% 
+#   full_join(LME_names)
 # 
-### FAO AREA FROM WEBSITE - Checked all OK 
-# Area 18 # NOT IN MASK
-# ARCTIC SEA (Major Fishing Area 18)
-# Area 21
-# Northwest Atlantic (Major Fishing Area 21)
-# Area 27
-# ATLANTIC, NORTHEAST (Major Fishing Area 27)
-# Area 31
-# ATLANTIC, WESTERN-CENTRAL (Major Fishing Area 31)
-# Area 34
-# ATLANTIC, EASTERN CENTRAL (Major Fishing Area 34)
-# Area 37 # NOT IN MASK 
-# MEDITERRANEAN AND BLACK SEA (Major Fishing Area 37)
-# Area 41
-# ATLANTIC, SOUTHWEST (Major Fishing Area 41)
-# Area 47
-# ATLANTIC, SOUTHEAST (Major Fishing Area 47)
-# Area 48
-# Atlantic, Antarctic (Major Fishing Area 48)
-# Area 51
-# INDIAN OCEAN, WESTERN (Major Fishing Area 51)
-# Area 57
-# INDIAN OCEAN, EASTERN (Major Fishing Area 57)
-# Area 58
-# Antarctic and Southern Indian Ocean (Major Fishing Area 58)
-# Area 61
-# PACIFIC, NORTHWEST (Major Fishing Area 61)
-# Area 67
-# PACIFIC, NORTHEAST (Major Fishing Area 67)
-# Area 71
-# PACIFIC, WESTERN CENTRAL (Major Fishing Area 71)
-# Area 77
-# PACIFIC, EASTERN CENTRAL (Major Fishing Area 77)
-# Area 81
-# PACIFIC, SOUTHWEST (Major Fishing Area 81)
-# Area 87
-# PACIFIC, SOUTHEAST (Major Fishing Area 87)
-# Area 88
-# Pacific, Antarctic (Major Fishing Area 88)
+# # combine with FAO_LME
+# FAO_LME_keys_new<-FAO_LME_keys %>% 
+#   mutate(Sector = ifelse(is.na(original_lme_id), "FAO", "LME"),
+#          ID_original = ifelse(is.na(original_lme_id), ID_merged, original_lme_id),
+#          LME_FAO = paste(Sector, ID_original, sep = "_")) %>% 
+#   select(ID_merged, LME_FAO)
+# 
+# # nrow(FAO_LME_keys_new) # 83
+# 
+# FAO_LME_new<-FAO_LME %>% 
+#   full_join(FAO_LME_keys_new) %>% 
+#   select(-ID_merged)
+# 
+# # nrow(FAO_LME) # 173371
+# # nrow(FAO_LME_new) # 173371
+# 
+# # use this file for the aggregation and check outputs
+# 
+# # further checks 
+# # # from https://iwlearn.net/marine/lmes/list
+# # 1: East Bering Sea	
+# # 18: West Greenland Shelf	
+# # 35: Gulf of Thailand	
+# # 52: Sea of Okhotsk
+# # 2: Gulf of Alaska	
+# # 19: East Greenland Shelf	
+# # 36: South China Sea	
+# # 53: West Bering Sea
+# # 3: California Current	
+# # 20: Barents Sea	
+# # 37: Sulu-Celebes Sea	
+# # 54: Northern Bering - Chukchi Seas
+# # 4: Gulf of California	
+# # 21: Norwegian Sea	
+# # 38: Indonesian Sea	
+# # 55: Beaufort Sea
+# # 5: Gulf of Mexico	
+# # 22: North Sea	
+# # 39: North Australian Shelf	
+# # 56: East Siberian Sea
+# # 6: Southeast U.S. Continental Shelf	
+# # 23: Baltic Sea 	
+# # 40: Northeast Australian Shelf	
+# # 57: Laptev Sea
+# # 7: Northeast U.S. Continental Shelf	
+# # 24: Celtic-Biscay Shelf	
+# # 41: East Central Australian Shelf	
+# # 58: Kara Sea
+# # 8: Scotian Shelf	
+# # 25: Iberian Coastal	
+# # 42: Southeast Australian Shelf	
+# # 59: Iceland Shelf and Sea
+# # 9: Newfoundland-Labrador Shelf	
+# # 26: Mediterranean Sea	
+# # 43: South West Australian Shelf	
+# # 60: Faroe Plateau
+# # 10: Insular Pacific-Hawaiian	
+# # 27: Canary Current	
+# # 44: West Central Austalian Shelf	
+# # 61: Antarctica
+# # 11: Pacific Central-American Coastal	
+# # 28: Guinea Current	
+# # 45: Northwest Australian Shelf	
+# # 62: Black Sea
+# # 12: Caribbean Sea	
+# # 29: Benguela Current	
+# # 46: New Zealand Shelf	
+# # 63: Hudson Bay Complex
+# # 13: Humboldt Current	
+# # 30: Agulhas Current	
+# # 47: East China Sea	
+# # 64: Central Arctic
+# # 14: Patagonian Shelf	
+# # 31: Somali Coastal Current	
+# # 48: Yellow Sea	
+# # 65: Aleutian Islands
+# # 15: South Brazil Shelf	
+# # 32: Arabian Sea	
+# # 49: Kuroshio Current	
+# # 66: Canadian High Arctic - North Greenland
+# # 16: East Brazil Shelf	
+# # 33: Red Sea	
+# # 50: Sea of Japan	
+# # 17: North Brazil Shelf	
+# # 34: Bay of Bengal	
+# # 51: Oyashio Current	
+# # 
+# # LME_key_check<- data.frame(LME_number = c(1,18,35,52,2,19,36,53,3,20,37,54,4,21,38,55,5,22,39,56,6,23,40,57,7,24,41,58,8,25,42,59,9,26,43,60,10,27,44,61,11,28,45,62,12,29,46,63,13,30,47,64,14,31,48,65,15,32,49,66,16,33,50,17,34,51), name_merge = c("East Bering Sea","West Greenland Shelf","Gulf of Thailand","Sea of Okhotsk","Gulf of Alaska","East Greenland Shelf","South China Sea","West Bering Sea","California Current","Barents Sea","Sulu-Celebes Sea","Northern Bering - Chukchi Seas","Gulf of California","Norwegian Sea","Indonesian Sea","Beaufort Sea","Gulf of Mexico","North Sea","North Australian Shelf","East Siberian Sea","Southeast U.S. Continental Shelf","Baltic Sea","Northeast Australian Shelf","Laptev Sea","Northeast U.S. Continental Shelf","Celtic-Biscay Shelf","East Central Australian Shelf","Kara Sea","Scotian Shelf","Iberian Coastal","Southeast Australian Shelf","Iceland Shelf and Sea","Newfoundland-Labrador Shelf","Mediterranean Sea","South West Australian Shelf","Faroe Plateau","Insular Pacific-Hawaiian","Canary Current","West Central Austalian Shelf","Antarctica","Pacific Central-American Coastal","Guinea Current","Northwest Australian Shelf","Black Sea","Caribbean Sea","Benguela Current","New Zealand Shelf","Hudson Bay Complex","Humboldt Current","Agulhas Current","East China Sea","Central Arctic","Patagonian Shelf","Somali Coastal Current","Yellow Sea","Aleutian Islands","South Brazil Shelf", "Arabian Sea","Kuroshio Current","Canadian High Arctic - North Greenland","East Brazil Shelf", "Red Sea", "Sea of Japan","North Brazil Shelf","Bay of Bengal", "Oyashio Current"))
+# # 
+# # View(LME_key_check)
+# # View(LME_names) # LME 18 and 19 have different names but OK 
+# # 
+# ### FAO AREA FROM WEBSITE - Checked all OK 
+# # Area 18 # NOT IN MASK
+# # ARCTIC SEA (Major Fishing Area 18)
+# # Area 21
+# # Northwest Atlantic (Major Fishing Area 21)
+# # Area 27
+# # ATLANTIC, NORTHEAST (Major Fishing Area 27)
+# # Area 31
+# # ATLANTIC, WESTERN-CENTRAL (Major Fishing Area 31)
+# # Area 34
+# # ATLANTIC, EASTERN CENTRAL (Major Fishing Area 34)
+# # Area 37 # NOT IN MASK 
+# # MEDITERRANEAN AND BLACK SEA (Major Fishing Area 37)
+# # Area 41
+# # ATLANTIC, SOUTHWEST (Major Fishing Area 41)
+# # Area 47
+# # ATLANTIC, SOUTHEAST (Major Fishing Area 47)
+# # Area 48
+# # Atlantic, Antarctic (Major Fishing Area 48)
+# # Area 51
+# # INDIAN OCEAN, WESTERN (Major Fishing Area 51)
+# # Area 57
+# # INDIAN OCEAN, EASTERN (Major Fishing Area 57)
+# # Area 58
+# # Antarctic and Southern Indian Ocean (Major Fishing Area 58)
+# # Area 61
+# # PACIFIC, NORTHWEST (Major Fishing Area 61)
+# # Area 67
+# # PACIFIC, NORTHEAST (Major Fishing Area 67)
+# # Area 71
+# # PACIFIC, WESTERN CENTRAL (Major Fishing Area 71)
+# # Area 77
+# # PACIFIC, EASTERN CENTRAL (Major Fishing Area 77)
+# # Area 81
+# # PACIFIC, SOUTHWEST (Major Fishing Area 81)
+# # Area 87
+# # PACIFIC, SOUTHEAST (Major Fishing Area 87)
+# # Area 88
+# # Pacific, Antarctic (Major Fishing Area 88)
 
 ```
 
 # Add interactions between EEZ and FAO 
 
+Not needed see reason above 
+
 ```{r}
 
-FAO_EEZ_keys <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO_EEZ_masks/FAO_EEZ_keys.csv")
-
-FAO_EEZ_keys<-FAO_EEZ_keys %>% mutate(name_merge = gsub(" Exclusive Economic Zone", "", name_merge), 
-                        name_merge = gsub(" Exclusive economic Zone", "", name_merge),
-                        name_merge = gsub(" Exclusive Economi", "", name_merge),
-                        name_merge = gsub(" Exclusive Econo", "", name_merge))
-
-
-# check only EEZ 
-trial<-FAO_EEZ_keys[19:nrow(FAO_EEZ_keys),]
-trial<-unique(trial)
-nrow(trial) # 281 EEZ 
-sort(unique(trial$name_merge))
-
-# check with EEZ from Yannick and used for merging 
-trial2<-EEZ_adj %>% filter(eez_country_code != 0) %>% select(eez_country_code, eez_country_name) %>% unique()
-
-nrow(as.data.table(trial2)) # 186
-sort(unique(as.data.table(trial2)$eez_country_name))
-
-# SEND EMAIL TO DENISSE - DONE  
+# FAO_EEZ_keys <- read_csv("/rd/gem/private/fishmip_inputs/ISIMIP3a/fishmip_regions/FAO_EEZ_masks/FAO_EEZ_keys.csv")
+# 
+# FAO_EEZ_keys<-FAO_EEZ_keys %>% mutate(name_merge = gsub(" Exclusive Economic Zone", "", name_merge), 
+#                         name_merge = gsub(" Exclusive economic Zone", "", name_merge),
+#                         name_merge = gsub(" Exclusive Economi", "", name_merge),
+#                         name_merge = gsub(" Exclusive Econo", "", name_merge))
+# 
+# 
+# # check only EEZ 
+# trial<-FAO_EEZ_keys[19:nrow(FAO_EEZ_keys),]
+# trial<-unique(trial)
+# nrow(trial) # 281 EEZ 
+# sort(unique(trial$name_merge))
+# 
+# # check with EEZ from Yannick and used for merging 
+# trial2<-EEZ_adj %>% filter(eez_country_code != 0) %>% select(eez_country_code, eez_country_name) %>% unique()
+# 
+# nrow(as.data.table(trial2)) # 186
+# sort(unique(as.data.table(trial2)$eez_country_name))
+# 
+# # SEND EMAIL TO DENISSE - DONE  
 
 ```
 
@@ -402,9 +407,9 @@ join_effort_data <- function(this_file_name){
   
   # this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated/", "aggregated_", this_file_name) 
   # CN this version consideres EEZ aggregation using EEZ FAOname instead of the administrative country name. 
-  # this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated_EEZ/", "aggregated_EEZ_", this_file_name)
-  # CN this version consideres EEZ aggregation using EEZ FAOname instead of the administrative country name (Yannick's file) and intersection between LME and FAO regions to split the high seas. Need to add the intersection between EEZ and FAO regions once the above is solved
-  this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated_HighSea/", "aggregated_HighSea_", this_file_name)
+  this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated_EEZ/", "aggregated_EEZ_", this_file_name)
+  # CN this version considers EEZ aggregation using EEZ FAOname instead of the administrative country name (Yannick's file) and intersection between LME and FAO regions to split the high seas. NO NEED AS the original code already does this
+  # this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated_HighSea/", "aggregated_HighSea_", this_file_name)
   
   # if(file.exists(this_destination_path)){ # CN - why this? the file does not exist
     
@@ -447,7 +452,7 @@ join_effort_data <- function(this_file_name){
       left_join(LMEs, by=c("Lat", "Lon")) %>%
       left_join(EEZ_adj, by=c("Lat", "Lon")) %>%
       left_join(FAO_regions, by=c("Lat", "Lon")) %>%
-      left_join(FAO_LME_new, by = c("Lat", "Lon")) %>% # CN added 
+      # left_join(FAO_LME_new, by = c("Lat", "Lon")) %>% # CN added no need
       group_by(eez_country_name, fao_area, LME, LME_FAO, SAUP, Gear, FGroup, Sector) %>%
       summarise(NomActive = sum(NomActive, na.rm = TRUE),
                 EffActive = sum(EffActive, na.rm = TRUE),
@@ -496,10 +501,10 @@ Check the files
 # newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated"), full.names = TRUE)
 
 # # CN consider the EEZ version as explained above 
-# newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated_EEZ"), full.names = TRUE)
+newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated_EEZ"), full.names = TRUE)
 
-# CN consider the HighSea version as explained above 
-newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated_HighSea"), full.names = TRUE)
+# CN consider the HighSea version as explained above - no need
+# newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated_HighSea"), full.names = TRUE)
 
 #pick one randomly 
 map(newly_written_files[[8]], fread)
@@ -511,11 +516,12 @@ Combine all listed files to one file
 combined_aggregated_effort <- rbindlist(mclapply(X = newly_written_files, FUN = fread, mc.cores = 40))
 
 # fwrite(x = combined_aggregated_effort, file.path(yannick_dir, "all_effort_aggregated.csv"))
-# # CN consider the EEZ version as explained above 
-# fwrite(x = combined_aggregated_effort, file.path(yannick_dir, "all_effort_aggregated_EEZ.csv"))
 
-# CN consider the HighSea version as explained above 
-fwrite(x = combined_aggregated_effort, file.path(yannick_dir, "all_effort_aggregated_HighSea.csv"))
+# CN consider the EEZ version as explained above
+fwrite(x = combined_aggregated_effort, file.path(yannick_dir, "all_effort_aggregated_EEZ.csv"))
+
+# # CN consider the HighSea version as explained above 
+# fwrite(x = combined_aggregated_effort, file.path(yannick_dir, "all_effort_aggregated_HighSea.csv"))
 
 ```
 
